<resources>
    <string name="app_name">DCM_StellarSmiles</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to Login</string>
    <string name="register">Register</string>
    <string name="welcome">WELCOME!</string>
    <string name="logout">Logout</string>
    <string name="stellar_smiles">Stellar Smiles</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="support_stellar_smiles_com">support@stellar-smiles.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="shorts">Shorts</string>
    <string name="birth_date">Birth Date (DD/MON/YYYY)</string>
    <string name="cnp">CNP</string>
    <string name="full_name">Full name</string>
    <string name="profile">Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_regularly_smoke">Do you regularly smoke?</string>
    <string name="do_you_regularly_drink">Do you regularly drink?</string>
    <string name="phone_number">Phone number</string>
    <string name="your_profile_page">Your profile page</string>
    <string name="smoker">Smoker</string>
    <string name="drinker">Drinker</string>
    <string name="appointments_completed">Appointments Completed</string>
    <string name="schedule_an_appointment">Schedule an Appointment</string>
    <string name="consultation_type">Consultation type:</string>
    <string name="doctor">Doctor:</string>
    <string name="appointment_date">Date:</string>
    <string name="schedule">Schedule</string>
    <string name="appointments">Appointments</string>
    <string name="appointment_status">Status:</string>
    <string name="appointment_cost">Appointment Cost:</string>
    <string name="welcomeUser">Welcome</string>
    <string name="you_currently_have_an_appointment_on_going">You currently have an appointment ongoing!</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="cost">Cost</string>
    <string name="costApp">Cost:</string>
    <string name="typeApp">Type:</string>
    <string name="prices">Prices</string>
    <string name="cancel">Cancel</string>
    <string name="receptionists">Receptionists</string>
    <string name="assistants">Assistants</string>
    <string name="doctors">Doctors</string>
    <string name="employees">Employees</string>
    <string name="edit">Edit</string>
    <string name="add_employee">Add Employee</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="select_week">Select Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="schedule_for_the_week">Schedule for the week</string>
    <string name="you_have_already_done_your_schedule_for_the_month">You have already done your schedule! The Dates Shown are the ones mentioned for not coming!</string>
    <string name="reschedule">Reschedule</string>
    <string name="patient">Patient:</string>
    <string name="select_month">Select Month</string>
    <string name="specialization_or_department">Specialization or Department</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="consultation">Consultation</string>
    <string name="duration">Duration:</string>
    <string name="_0_00">0.00</string>
    <string name="_0_minutes">0 minutes</string>
    <string name="appointment_time">Appointment Time:</string>
    <string name="hour">Hour:</string>
    <string name="you_are_now_a_loyal_customer_we_thank_you">You are now a loyal customer, we thank you!</string>
    <string name="you_have_already_done_your_schedule_the_dates_shown_are_the_one_mentioned_for_not_coming">You have already done your schedule! The Dates Shown are the one mentioned for not coming!</string>
    <string name="patients">Patients</string>
    <string name="appointment">Appointment:</string>

    <string-array name="employee_types">
        <item>Doctor</item>
        <item>Assistant</item>
        <item>Receptionist</item>
    </string-array>

    <string-array name="doctor_specializations">
        <item>Periodontist</item>
        <item>Endodontist</item>
        <item>General Dentist</item>
        <item>Orthodontist</item>
    </string-array>

    <string-array name="assistant_departments">
        <item>Radiology</item>
        <item>Administration</item>
        <item>Lab</item>
        <item>Support</item>
    </string-array>
</resources>