<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp">

    <Spinner
        android:id="@+id/spinner_doctors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/doctors" />

    <Spinner
        android:id="@+id/spinner_assistants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/assistants"/>

    <Spinner
        android:id="@+id/spinner_receptionists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/receptionists"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_employee"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_selected"/>
</LinearLayout>
