<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/Appointments"
        android:title="@string/appointments"
        android:icon="@drawable/event"
        />

    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false"  />

    <item
        android:id="@+id/employees"
        android:title="@string/employees"
        android:icon="@drawable/employees" />
    <item
        android:id="@+id/price"
        android:title="@string/prices"
        android:icon="@drawable/prices" />

</menu>