<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_bk"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_view_appointment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_date"
        android:textColor="@color/darkPurple"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeApp"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costApp"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_status"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:isIndicator="true"
        android:progressTint="@color/darkPurple"
        android:progressBackgroundTint="@color/midPurple"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp"
            android:background="@drawable/darkprpl_rounded_bk"
            android:textColor="@color/lightPurple"/>

        <Button
            android:id="@+id/button_reschedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reschedule"
            android:background="@drawable/darkprpl_rounded_bk"
            android:textColor="@color/lightPurple"/>

    </LinearLayout>

</LinearLayout>
