<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/Schedule_Doctor"
            android:icon="@drawable/home"
            android:title="@string/schedule"/>
        <item
            android:id="@+id/Appointments_Doctor"
            android:icon="@drawable/event"
            android:title="@string/appointments"/>

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/Logout_Doctor"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>