<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/midPurple">

    <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_bk"
        android:text="@string/select_week"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        android:textColor="@color/darkPurple"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/layoutMonday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutWednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutThursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFriday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSaturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/rounded_bk"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkBoxSunday"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="@color/darkPurple"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/save_schedule"
        android:textColor="@color/darkPurple"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textViewScheduleStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/you_have_already_done_your_schedule_for_the_week"
        android:textColor="@color/lightPurple"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"/>
</LinearLayout>
